--- a/tilit/templates/tilitbase.html
+++ b/tilit/templates/tilitbase.html
@@ -1,12 +1,21 @@
 <!--Tilien Layout-->
-
+{% load static %}
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Bootswatch CSS -->
+    <link href="{% static 'css/spacelab.css' %}" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="{% static 'css/oma.css' %}" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <title>Tilinhallinta</title>
 </head>
+
 <body>
     <h3>Tilit.html</h3>
     <p></p>
@@ -16,4 +25,5 @@
     </center>
     <hr>
 </body>
+
 </html>
