--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,19 +1,27 @@
 <!--Globaali Layout-->
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hey Elefant</title>
+
+      <!-- Bootswatch CSS -->
+  <link href="{% static 'css/spacelab.css' %}" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link href="{% static 'css/oma.css' %}" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+
+    <title>E-Le-Fant</title>
 </head>
 <body>
     <h3>Layout.html</h3>
-    <p></p>
-    <center>
+
     {% block content %}
+
     {% endblock%}
-    </center>
-    <hr>
+
 </body>
 </html>
