--- a/tilit/templates/tilit/kirjaudu.html
+++ b/tilit/templates/tilit/kirjaudu.html
@@ -3,7 +3,7 @@ E:\Koodi\DJANGO\drfsocialapp\main\tilit\templates\kirjaudu.html
 -->
 
 <!---Kirjautumis sivun base tai ns 'layout'-->
-{% extends 'tilitbase.html' %}
+{% extends 'tilit/tilitbase.html' %}
 
 {% block content %}
 
