--- a/tilit/templates/tilit/loggedout.html
+++ b/tilit/templates/tilit/loggedout.html
@@ -1,7 +1,7 @@
 <!--ns Home sivu-->
 
 <!DOCTYPE html>
-{% extends 'layout.html' %}
+{% extends 'tilit/tilitbase.html' %}
 {% block content %}
 
 <h4>Olet kirjautunut ulos</h4>
