--- a/tilit/templates/tilit/tunnukset.html
+++ b/tilit/templates/tilit/tunnukset.html
@@ -1,7 +1,7 @@
 <!--Tunnusten luonti sivu-->
 
 <!DOCTYPE html>
-{% extends 'tilitbase.html' %}
+{% extends 'tilit/tilitbase.html' %}
 
 {% block content %}
 <h2>Luo tunnukset</h2>
