--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
 
   <div class="item2">
     {% if user.is_authenticated %}
-      <form action="{% url 'logout' %}" method="post" class="form-inline">
+      <form action="{% url 'loggedout' %}" method="post" class="form-inline">
         {% csrf_token %}
         <button type="submit" class="btn btn-primary">Kirjaudu ulos</button>
       </form>
